src/test/ui/hrtb/hrtb-exists-forall-trait-covariant.stderr
error[E0277]: the trait bound `(): Trait<for<'b> fn(fn(&'b u32))>` is not satisfied
  --> $DIR/hrtb-exists-forall-trait-covariant.rs:36:11
   |
LL | fn foo<T>()
   |    --- required by a bound in this
LL | where
LL |     T: Trait<for<'b> fn(fn(&'b u32))>,
   |        ------------------------------ required by this bound in `foo`
...
LL |     foo::<()>();
   |           ^^ the trait `Trait<for<'b> fn(fn(&'b u32))>` is not implemented for `()`
   |
   = help: the following implementations were found:
             <() as Trait<fn(fn(&'a u32))>>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
